--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   },
-  "packageManager": "yarn@4.3.1+sha224.934d21773e22af4b69a7032a2d3b4cb38c1f7c019624777cc9916b23"
+  "packageManager": "yarn@4.5.1"
 }
