--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   },
   "dependencies": {
     "fs": "^0.0.1-security",
+    "mongodb": "^6.10.0",
+    "mysql2": "^3.11.4",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7"
   },
