--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "funding": {
     "type": "individual",
-    "url": "https://ko-fi.com/maximking"
+    "url": "https://ko-fi.com/maximking1"
   },
   "man": "./readme.md",
   "repository": {
