--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "files": ["./src/index.ts"],
+  "files": ["src/Permissionless.ts"],
   "compilerOptions": {
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -10,5 +10,6 @@
     "outDir": "./dist",
     "module": "commonjs",
     "esModuleInterop": true
-  }
+  },
+  "include": ["src/**/*"],
 }
