--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "permissionless.js",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "Permissionless.js is a Permissions handler for node projects, it can be used via frontend and backend services.",
   "keywords": [
     "permissions",
@@ -56,11 +56,7 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.10.0",
-    "axios": "^1.7.7",
-    "chalk": "^5.3.0",
-    "fs": "^0.0.1-security",
-    "node-fetch": "^3.3.2",
-    "path": "^0.12.7"
+    "axios": "^1.7.7"
   },
   "exports": {
     ".": {
